templates/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: busybox-service
spec:
  selector:
    app: busybox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
